name:                psc-package
version:             0.3.1
synopsis:            An experimental package manager for PureScript
description:
homepage:            https://github.com/purescript/psc-package
license:             BSD3
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           2017 Phil Freeman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable psc-package
    build-depends: base >=4 && <5,
                   aeson -any,
                   aeson-pretty -any,
                   async >= 2.1.1,
                   bytestring -any,
                   containers -any,
                   foldl -any,
                   optparse-applicative -any,
                   process -any,
                   system-filepath -any,
                   text -any,
                   turtle >= 1.3
    main-is: Main.hs
    other-modules: Paths_psc_package
                   Types
    buildable: True
    hs-source-dirs: app
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
